--- a/views/about.pug
+++ b/views/about.pug
@@ -12,16 +12,16 @@ block content
       .about-intro-box.box
 
         //- Replace with your name
-        h1 Name
+        h1 Virgile Reiter
 
         //- Feel free to personalize the title below
-        p Full Stack JavaScript Developer
+        p Aspiring Full Stack JavaScript Developer, Phd. in Medieval History, passionate about learning and teaching.
 
 
         .about-bio
 
           //- Replace the boilerplate below with your best elevator pitch
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
+          p Do you want to work with a Full Stack Javascript Developer with a lot of intercultural work experience, a passion for transmitting knownledge and learning new things? Look no further! I'm in the process of switching careers , but that doesn't mean I can't apply old skills to my new field! I'm the perfect candidate if you need someone: who can work alone AND in a team, who isn't afraid of discovering new concepts and ideas, who has a lot of experience guiding and teaching peers and who can assimilate lots of information quickly. 
 
 
       .skills-contact-box.box
@@ -32,6 +32,9 @@ block content
           li HTML
           li CSS
           li JavaScript
+          li Python 
+          li Flask
+          li Heroku 
           li Git and GitHub
           li VS Code
           li Accessibility
@@ -40,18 +43,22 @@ block content
           li Node.js
           li Express
           li Pug
-
+        h6 I speak 
+        ul
+          li French 
+          li English 
+          li Swedish
+        
         h6 Contact Info
 
         //- Replace with your own contact info - feel free to use fake information if you prefer
-        ul
-          li 555-555-1234
-          li email@email.com
+        ul        
+          li virgile.reiter@gmail.com
 
         //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='') LinkedIn
-        a.btn-link(href='') GitHub
-        a.btn-link(href='') Twitter
+        a.btn-link(href='https://www.linkedin.com/in/virgile-reiter-3a5276b2/') LinkedIn
+        a.btn-link(href='https://github.com/Virgile-R') GitHub
+       
 
     nav.nav
       a(href='/')
