--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,7 @@
 /*
   Main styles
 */
+
 * {
   box-sizing: border-box;
 }
@@ -17,22 +18,22 @@ body {
 
 body {
   position: relative;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, 'Roboto Condensed', Arial, sans-serif;
   font-weight: normal;
   line-height: 1.5;
   color: #0a0a0a;
-  background: #fefefe;
+  background: #f6f4f2;
   background: #000;
   transform: translateX(0px);
   transition: all 0.4s ease-out;
 }
 
 article {
-  background: #fefefe;
+  background: #f6f4f2;
 }
 
 h1,h2,h3,h4,h5,p{
-  font-family: 'Merriweather', serif;
+  font-family: 'Roboto Condensed', serif;
 }
 
 h5{
@@ -61,9 +62,9 @@ a {
 .wrapper {
   width: 100%;
   min-width: 320px;
-  height: 100%;
-  min-height: 100%;
-  background: #fefefe;
+  height: 100em;
+  min-height: 100em;
+  background: #f6f4f2;
 }
 
 .flex-row-wrap {
@@ -80,9 +81,9 @@ a {
 
 .box {
   width: 100%;
-  max-width: 1200px;
+  max-width: 1600px;
   padding: 40px 50px 30px;
-  background: #fefefe;
+  background: #f6f4f2;
   border-bottom: 1px solid #eaeaea;
 }
 
@@ -108,7 +109,7 @@ a {
 nav {
   width: 100%;
   padding: 20px;
-  border-bottom: 1px solid #eaeaea;
+  border-bottom: 1px solid #aeadad;
 }
 
 nav a {
@@ -134,13 +135,15 @@ nav a span {
   bottom: 0;
   min-width: 300px;
   max-width: 300px;
-  height: 100%;
-  min-height: 100%;
+  height: 100vh;
+  min-height: 100em;
   padding: 20px;
-  background: #000;
+  background: #001730;
 }
 
 .sidebar-info-box {
+  position: sticky;
+  top:0%;
   margin: auto;
 }
 
@@ -181,7 +184,7 @@ nav a span {
 
 .header {
   vertical-align: middle;
-  color: #fefefe;
+  color: #f6f4f2;
   height: 40px;
   padding: 0.5rem;
   background: #0a0a0a;
@@ -204,8 +207,8 @@ nav a span {
   background: #0a0a0a;
   margin-top: 3px;
   margin-right: 10px;
-  border-top: 2px solid #fefefe;
-  border-bottom: 2px solid #fefefe;
+  border-top: 2px solid #f6f4f2;
+  border-bottom: 2px solid #f6f4f2;
 }
 
 .header button:after {
@@ -223,7 +226,7 @@ nav a span {
   Home page styles
 */
 .portfolio-intro {
-  max-width: 1200px;
+  max-width: 1200;
   padding: 40px 50px 30px;
 }
 
@@ -238,7 +241,7 @@ nav a span {
   font-size: 125%;
   margin: 0 auto;
   padding-bottom: 40px;
-  border-bottom: 1px solid #eaeaea;
+  border-bottom: 1px solid #aeadad;
 }
 
 .projects-box h5 {
@@ -299,7 +302,10 @@ nav a span {
   background-color: #333;
   border: 1px solid transparent;
 }
-
+.thumbnail{
+  max-width: 550px;
+  max-height: 550px;
+}
 
 /* 
   Tablet layout styles 
