--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,35 +5,40 @@ html(lang="en" dir="ltr")
     meta(http-equiv='x-ua-compatible', content='ie=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title My Web Portfolio
-    link(href='https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700,800', rel='stylesheet')
+    //-link(href='https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700,800', rel='stylesheet')
+    link(rel="preconnect", href="https://fonts.googleapis.com")
+    link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
+    link(href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;1,300&display=swap", rel="stylesheet") 
     link(rel='stylesheet', href='/static/css/normalize.css')
+
     link(rel='stylesheet', href='/static/css/styles.css')
 
   body
-    #my-info.sidebar
-      .sidebar-info-box
-        br
-        .thumbnail-box
-          img.thumbnail(src='/static/images/photoprofil.jpg', alt='Photo of Virgile Reiter')
-        .dev-intro-box
+    div 
+      #my-info.sidebar
+        .sidebar-info-box
+          br
+          .thumbnail-box
+            img.thumbnail(src='/static/images/photoprofil.jpg', alt='Photo of Virgile Reiter')
+          .dev-intro-box
 
-          //- Replace with your name
-          h5 Virgile Reiter
+            //- Replace with your name
+            h5 Virgile Reiter
 
-          //- Replace with description of who you are, what you do, and why you are so awesome
-          p Aspiring Full Stack JavaScript dev, Phd in Scandinavian History, geek and cat lover.
+            //- Replace with description of who you are, what you do, and why you are so awesome
+            p Aspiring Full Stack JavaScript dev, Phd in Scandinavian History, geek and cat lover.
 
-          //- Add path from your '/about' route handler to the href below
-          a(href='/about') Learn More &rarr;
+            //- Add path from your '/about' route handler to the href below
+            a(href='/about') Learn More &rarr;
 
-    .wrapper
-      .header
-        .header-info-box
-          button#menu-icon.menu-icon(type='button' data-toggle='my-info')
+      .wrapper
+        .header
+          .header-info-box
+            button#menu-icon.menu-icon(type='button' data-toggle='my-info')
 
-          //- Replace with your name — this is for the mobile layout
-          span Virgile Reiter
+            //- Replace with your name — this is for the mobile layout
+            span Virgile Reiter
 
-      block content
+        block content
 
   script(src='/static/js/script.js')
