--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,7 +18,7 @@ body {
 
 body {
   position: relative;
-  font-family: "Helvetica Neue", Helvetica, 'Roboto Condensed', Arial, sans-serif;
+  font-family: 'Roboto Condensed', Arial, sans-serif,"Helvetica Neue", Helvetica; 
   font-weight: normal;
   line-height: 1.5;
   color: #0a0a0a;
@@ -35,7 +35,12 @@ article {
 h1,h2,h3,h4,h5,p{
   font-family: 'Roboto Condensed', serif;
 }
-
+h1, h5, h6{
+  color:#eb973d
+}
+a, a:visited {
+  color:teal
+}
 h5{
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   letter-spacing: 2.5px;
@@ -62,8 +67,8 @@ a {
 .wrapper {
   width: 100%;
   min-width: 320px;
-  height: 100em;
-  min-height: 100em;
+  height: 100vh;
+  min-height: 100vh;
   background: #f6f4f2;
 }
 
@@ -135,10 +140,9 @@ nav a span {
   bottom: 0;
   min-width: 300px;
   max-width: 300px;
-  height: 100vh;
-  min-height: 100em;
+  
   padding: 20px;
-  background: #001730;
+  background: #000
 }
 
 .sidebar-info-box {
@@ -162,7 +166,6 @@ nav a span {
 }
 
 .sidebar h5 {
-  color: #fefefe;
   margin: 0 auto 0.5rem;
 }
 
@@ -232,7 +235,6 @@ nav a span {
 
 .portfolio-intro h1 {
   font-size: 1.5rem;
-  color: #0a0a0a;
   margin: 0 auto 8px;
 }
 
