--- a/views/error.pug
+++ b/views/error.pug
@@ -2,7 +2,8 @@ extends layout.pug
 
 block content
 
-    h1 #{err.message}
-        a(href='/')
-            span &larr;
-            |  Back
+    h1.error #{err.status}
+    p  #{err.message}
+    a(href='/')
+      span &larr;
+      |  Back 
