--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,7 +26,7 @@ html(lang="en" dir="ltr")
             h5 Virgile Reiter
 
             //- Replace with description of who you are, what you do, and why you are so awesome
-            p Aspiring Full Stack JavaScript dev, Phd in Scandinavian History, geek and cat lover.
+            p Aspiring Full Stack JavaScript dev, PhD. in Medieval History, geek and cat lover.
 
             //- Add path from your '/about' route handler to the href below
             a(href='/about') Learn More &rarr;
